[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trip_travel_planner"
version = "0.0.2"
authors = [
  { name="sai", email="yenishettysai@gmail.com" },
]
description = "This is a Travel Planner App built with Streamlit that generates personalized travel itineraries based on user input"
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/saikrisnaa/travelplanner"
Issues = "https://github.com/saikrisnaa/travelplanner"
